--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <body>
         <div>
         
-        <form th:action="@{Courses/Register}" method="post">
+        <form th:action="@{/Courses/Register}" method="post">
             <h1>Register Course</h1>
             <label for="course"> Select Your Course : </label>
             <select id="course" name="CourseName">
@@ -90,3 +90,4 @@
 </Html>
 
  
+
